vlib/v/checker/tests/undefined_ident_in_if_guard_err.out
vlib/v/checker/tests/undefined_ident_in_if_guard_err.vv:6:11: error: undefined variable: `re`
    4 |
    5 | fn main() {
    6 |     if re := re.regex_opt('a') {
      |              ~~
    7 |         print('Hooray')
    8 |     }
